fix: Invalid align-items value

--- a/frappe/public/less/flex.less
+++ b/frappe/public/less/flex.less
@@ -38,7 +38,7 @@
 .flush-top {
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .level {
